[mmc] removed restart tomcat class and task