@@ -731,53 +731,6 @@ export.database: exports database structure and data to xml files.
      <antcall target="compile.complete.deploy" />
   </target>
   
-  <!-- 
-		apparently this does not overwrite the default catalina_opts, only
-		if it is not set will it be set to the value below 
-	-->
-  <property name="env.CATALINA_OPTS" value="-XX:MaxPermSize=128M" />
-
-  <!-- 
-		This task is called from the Openbravo ui, it spawns a java call which again
-		calls the restart.tomcat.do task as a spawned task.
-	-->
-  <target name="tomcat.restart">
-    <echo message="Restarting tomcat..." />
-    <java classname="org.openbravo.service.system.RestartTomcat" spawn="true" fork="true" maxmemory="${build.maxmemory}">
-      <arg line="${base.src}" />
-      <classpath refid="project.class.path" />
-    </java>
-  </target>
-
-  <!--
-		Is called by the org.openbravo.service.system.RestartTomcat class.
-	-->
-  <target name="tomcat.restart.do">
-    <echo message="Restarting Tomcat at ${env.CATALINA_HOME}" />
-    <java classname="org.apache.catalina.startup.Bootstrap" fork="true">
-      <classpath path=":${env.CATALINA_HOME}/bin/bootstrap.jar:${env.CATALINA_HOME}/bin/commons-logging-api.jar:${env.CATALINA_HOME}/bin/tomcat-juli.jar" />
-      <jvmarg value="-Dcatalina.home=${env.CATALINA_HOME}" />
-      <jvmarg value="-Dcatalina.base=${env.CATALINA_BASE}" />
-      <arg line="stop" />
-    </java>
-    <sleep description="Wait to give tomcat time to stop" seconds="20" />
-
-    <!-- if deploy.mode=class this will sync (& delete orphan) jarfiles from WebContent -> tomcat-->
-    <antcall target="copy.files.jarsync"/>
-
-    <java classname="org.apache.catalina.startup.Bootstrap" fork="true" spawn="true">
-      <classpath path=":${env.CATALINA_HOME}/bin/bootstrap.jar:${env.CATALINA_HOME}/bin/commons-logging-api.jar:${env.CATALINA_HOME}/bin/tomcat-juli.jar" />
-      <!-- note because CATALINA_OPTS can be multi argument the line attribute has to be used! -->
-      <jvmarg line="${env.CATALINA_OPTS}" />
-      <jvmarg value="-Djava.util.logging.manager=org.apache.juli.ClassLoaderLogManager" />
-      <jvmarg value="-Djava.util.logging.config.file=${env.CATALINA_BASE}/conf/logging.properties" />
-      <jvmarg value="-Dcatalina.base=${env.CATALINA_BASE}" />
-      <jvmarg value="-Dcatalina.home=${env.CATALINA_HOME}" />
-      <jvmarg value="-Djava.io.tmpdir=${env.CATALINA_BASE}/temp" />
-      <arg line="start" />
-    </java>
-  </target>
-
   <target name="tomcat.list">
     <taskdef name="list" classname="org.apache.catalina.ant.ListTask">
       <classpath refid="project.class.path" />
